--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "white-rabbit",
   "version": "0.1.0",
   "license": "MIT",
-  "packageManager": "yarn@4.2.2",
+  "packageManager": "yarn@4.5.0",
   "engines": {
     "yarn": ">=4",
     "node": ">=20"
@@ -26,58 +26,57 @@
     "lint": "yarn lint:prettier && yarn lint:stylelint && yarn lint:rs && yarn workspaces foreach --from 'packages/*' -Rpitv run lint",
     "upgrade": "yarn upgrade-interactive && cargo update && cargo upgrade --incompatible --pinned",
     "test": "cargo test",
-    "test:coverage": "rimraf target/debug/coverage; yarn test:coverage:test && yarn test:coverage:generate -t html -o target/debug/coverage/ && yarn test:coverage:generate -t lcov -o target/debug/coverage/lcov.info && yarn test:coverage:clean",
-    "test:coverage:test": "RUSTFLAGS='-Cinstrument-coverage' LLVM_PROFILE_FILE='coverage-%p-%m.profraw' cargo test",
-    "test:coverage:generate": "grcov . -s . --binary-path ./target/debug/ --branch --keep-only 'packages/*'",
-    "test:coverage:clean": "rimraf *.profraw; rimraf packages/**/*.profraw"
+    "test:coverage": "rimraf target/debug/coverage; yarn test:coverage:test && yarn test:coverage:generate -t html -o target/debug/coverage/ && yarn test:coverage:generate -t lcov -o target/debug/coverage/lcov.info",
+    "test:coverage:test": "CARGO_INCREMENTAL='0' RUSTDOCFLAGS='-Zprofile -Ccodegen-units=1 -Cinline-threshold=0 -Clink-dead-code -Coverflow-checks=off -Cpanic=abort -Zpanic_abort_tests' RUSTFLAGS='-Zprofile -Ccodegen-units=1 -Cinline-threshold=0 -Clink-dead-code -Coverflow-checks=off -Cpanic=abort -Zpanic_abort_tests' cargo +nightly test",
+    "test:coverage:generate": "grcov . -s . --binary-path ./target/debug/ --branch --keep-only 'packages/*'"
   },
   "devDependencies": {
-    "@commitlint/cli": "^19.3.0",
-    "@commitlint/config-conventional": "^19.2.2",
-    "@eslint/js": "^9.3.0",
-    "@intlify/unplugin-vue-i18n": "^4.0.0",
+    "@commitlint/cli": "^19.5.0",
+    "@commitlint/config-conventional": "^19.5.0",
+    "@eslint/js": "^9.11.1",
+    "@intlify/unplugin-vue-i18n": "^5.2.0",
     "@quasar/vite-plugin": "^1.7.0",
-    "@types/eslint": "^8.56.10",
-    "@types/jsdom": "^21.1.6",
-    "@types/lodash": "^4.17.4",
-    "@types/node": "^20.12.12",
-    "@vitejs/plugin-vue": "^5.0.4",
-    "@vitest/coverage-v8": "^1.6.0",
-    "@vue/compiler-dom": "^3.4.27",
+    "@types/eslint": "^9.6.1",
+    "@types/jsdom": "^21.1.7",
+    "@types/lodash": "^4.17.9",
+    "@types/node": "^22.6.1",
+    "@vitejs/plugin-vue": "^5.1.4",
+    "@vitest/coverage-v8": "^2.1.1",
+    "@vue/compiler-dom": "^3.5.8",
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.5.1",
-    "autoprefixer": "^10.4.19",
+    "autoprefixer": "^10.4.20",
     "commitizen": "^4.3.0",
-    "commitlint": "^19.3.0",
+    "commitlint": "^19.5.0",
     "cross-env": "^7.0.3",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^9.3.0",
+    "eslint": "^9.11.1",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-vue": "^9.26.0",
-    "husky": "^9.0.11",
-    "jsdom": "^24.1.0",
-    "markdownlint-cli": "^0.41.0",
-    "postcss": "^8.4.38",
+    "eslint-plugin-vue": "^9.28.0",
+    "husky": "^9.1.6",
+    "jsdom": "^25.0.1",
+    "markdownlint-cli": "^0.42.0",
+    "postcss": "^8.4.47",
     "postcss-html": "^1.7.0",
-    "postcss-load-config": "^5.1.0",
-    "prettier": "^3.2.5",
-    "rimraf": "^5.0.7",
+    "postcss-load-config": "^6.0.1",
+    "prettier": "^3.3.3",
+    "rimraf": "^6.0.1",
     "rollup-plugin-visualizer": "^5.12.0",
-    "sass": "^1.77.2",
-    "sass-loader": "^14.2.1",
-    "stylelint": "^16.6.0",
-    "stylelint-config-recommended-scss": "^14.0.0",
+    "sass": "^1.79.3",
+    "sass-loader": "^16.0.2",
+    "stylelint": "^16.9.0",
+    "stylelint-config-recommended-scss": "^14.1.0",
     "stylelint-config-recommended-vue": "^1.5.0",
     "stylelint-config-standard-scss": "^13.1.0",
     "stylelint-config-standard-vue": "^1.0.0",
-    "tailwindcss": "^3.4.3",
-    "typescript": "^5.4.5",
-    "typescript-eslint": "^7.11.0",
-    "vite": "^5.2.11",
-    "vitest": "^1.6.0",
-    "vue": "^3.4.27",
-    "vue-eslint-parser": "^9.4.2",
-    "vue-tsc": "^2.0.19"
+    "tailwindcss": "^3.4.13",
+    "typescript": "^5.6.2",
+    "typescript-eslint": "^8.7.0",
+    "vite": "^5.4.7",
+    "vitest": "^2.1.1",
+    "vue": "^3.5.8",
+    "vue-eslint-parser": "^9.4.3",
+    "vue-tsc": "^2.1.6"
   },
   "config": {
     "commitizen": {
