--- a/packages/app-tauri/package.json
+++ b/packages/app-tauri/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@white-rabbit/app-tauri",
-  "packageManager": "yarn@4.2.2",
+  "packageManager": "yarn@4.5.0",
   "version": "0.1.0",
   "scripts": {
     "dev": "yarn tauri dev",
@@ -16,23 +16,23 @@
     "clean": "rimraf dist/ node_modules/"
   },
   "dependencies": {
-    "@tauri-apps/api": "^2.0.0-beta.12",
-    "@tauri-apps/plugin-clipboard-manager": "^2.1.0-beta.1",
-    "@tauri-apps/plugin-dialog": "^2.0.0-beta.3",
-    "@tauri-apps/plugin-fs": "^2.0.0-beta.3",
-    "@tauri-apps/plugin-global-shortcut": "^2.0.0-beta.3",
-    "@tauri-apps/plugin-http": "^2.0.0-beta.3",
-    "@tauri-apps/plugin-notification": "^2.0.0-beta.3",
-    "@tauri-apps/plugin-os": "^2.0.0-beta.3",
-    "@tauri-apps/plugin-process": "^2.0.0-beta.3",
-    "@tauri-apps/plugin-shell": "^2.0.0-beta.4"
+    "@tauri-apps/api": "^2.0.0-rc.5",
+    "@tauri-apps/plugin-clipboard-manager": "^2.0.0-rc.2",
+    "@tauri-apps/plugin-dialog": "^2.0.0-rc.1",
+    "@tauri-apps/plugin-fs": "^2.0.0-rc.2",
+    "@tauri-apps/plugin-global-shortcut": "^2.0.0-rc.1",
+    "@tauri-apps/plugin-http": "^2.0.0-rc.2",
+    "@tauri-apps/plugin-notification": "^2.0.0-rc.1",
+    "@tauri-apps/plugin-os": "^2.0.0-rc.1",
+    "@tauri-apps/plugin-process": "^2.0.0-rc.1",
+    "@tauri-apps/plugin-shell": "^2.0.0-rc.1"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "^2.0.0-beta.18",
-    "@vitejs/plugin-vue": "^5.0.4",
-    "rimraf": "^5.0.7",
-    "vite": "^5.2.11",
-    "vitest": "^1.6.0",
-    "vue-tsc": "^2.0.19"
+    "@tauri-apps/cli": "^2.0.0-rc.16",
+    "@vitejs/plugin-vue": "^5.1.4",
+    "rimraf": "^6.0.1",
+    "vite": "^5.4.7",
+    "vitest": "^2.1.1",
+    "vue-tsc": "^2.1.6"
   }
 }
