--- a/packages/app-tauri/src-tauri/Cargo.toml
+++ b/packages/app-tauri/src-tauri/Cargo.toml
@@ -9,7 +9,7 @@ name = "app_lib"
 crate-type = ["staticlib", "cdylib", "rlib"]
 
 [build-dependencies]
-tauri-build = { version = "2.0.0-beta.16", features = [] }
+tauri-build = { version = "2.0.0-rc.12", features = [] }
 
 [dependencies]
 anyhow = "1.0"
@@ -20,20 +20,20 @@ env_logger = "0.11"
 futures = "0.3"
 log = "0.4"
 paste = "1.0"
-sea-orm = { version = "0.12", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
+sea-orm = { version = "1.0", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-tauri = { version = "2.0.0-beta.20", features = [] }
-tauri-plugin-clipboard-manager = "2.1.0-beta.2"
-tauri-plugin-dialog = "2.0.0-beta.7"
-tauri-plugin-fs = "2.0.0-beta.7"
-tauri-plugin-http = "2.0.0-beta.7"
-tauri-plugin-notification = "2.0.0-beta.5"
-tauri-plugin-os = "2.0.0-beta.4"
-tauri-plugin-process = "2.0.0-beta.4"
-tauri-plugin-shell = "2.0.0-beta.5"
-tokio = { version = "1.37", features = ["rt", "macros"] }
-uuid = { version = "1.8", features = ["serde", "macro-diagnostics"] }
+tauri = { version = "2.0.0-rc.15", features = [] }
+tauri-plugin-clipboard-manager = "2.1.0-beta.7"
+tauri-plugin-dialog = "2.0.0-rc.7"
+tauri-plugin-fs = "2.0.0-rc.5"
+tauri-plugin-http = "2.0.0-rc.5"
+tauri-plugin-notification = "2.0.0-rc.5"
+tauri-plugin-os = "2.0.0-rc.1"
+tauri-plugin-process = "2.0.0-rc.1"
+tauri-plugin-shell = "2.0.0-rc.3"
+tokio = { version = "1.40", features = ["rt", "macros"] }
+uuid = { version = "1.10", features = ["serde", "macro-diagnostics"] }
 
 [features]
 default = ["custom-protocol"]
@@ -44,4 +44,4 @@ migration = { path = "../../migration" }
 test-suite = { path = "../../test-suite" }
 
 [target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
-tauri-plugin-global-shortcut = "2.0.0-beta.4"
+tauri-plugin-global-shortcut = "2.0.0-rc.2"
