--- a/packages/endpoint-grpc/Cargo.toml
+++ b/packages/endpoint-grpc/Cargo.toml
@@ -7,12 +7,14 @@ edition = "2021"
 anyhow = "1.0"
 async-trait = "0.1"
 backend-core = { path = "../backend-core" }
+chrono = "0.4"
 dotenv = "0.15"
 env_logger = "0.11"
 futures = "0.3"
 log = "0.4"
 prost = "0.12"
 prost-types = "0.12"
+rand = "0.8"
 sea-orm = { version = "0.12", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
