--- a/packages/endpoint-grpc/Cargo.toml
+++ b/packages/endpoint-grpc/Cargo.toml
@@ -11,6 +11,7 @@ chrono = "0.4"
 dotenv = "0.15"
 env_logger = "0.11"
 futures = "0.3"
+itertools = "0.13"
 log = "0.4"
 prost = "0.12"
 prost-types = "0.12"
