--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
   "type": "module",
   "license": "MIT",
   "private": true,
-  "packageManager": "yarn@4.3.0",
+  "packageManager": "yarn@4.5.0",
   "engines": {
     "yarn": ">=4",
-    "node": ">=20"
+    "node": ">=22"
   },
   "scripts": {
     "postinstall": "husky",
@@ -24,7 +24,7 @@
     "lint:eslint": "eslint '**/*.{vue,ts,js,mjs}'",
     "lint:fix": "yarn lint:prettier --write && yarn lint:stylelint --fix && yarn lint:fix:rs && yarn lint:eslint --fix",
     "lint": "buf lint && yarn lint:prettier --check && yarn lint:stylelint && yarn lint:rs && yarn lint:eslint",
-    "upgrade": "yarn upgrade-interactive && cargo update && cargo upgrade --incompatible --pinned",
+    "upgrade": "yarn upgrade-interactive && concurrently 'rimraf .yarn/cache/ node_modules/ yarn.lock && yarn' 'cargo update && cargo upgrade --incompatible --pinned'",
     "test": "cargo test && vitest run",
     "test:coverage": "yarn test:coverage:rs && vitest run --coverage",
     "test:coverage:rs": "rimraf target/debug/coverage; yarn test:coverage:test && yarn test:coverage:generate -t html -o target/debug/coverage/ && yarn test:coverage:generate -t lcov -o target/debug/coverage/lcov.info",
@@ -33,60 +33,61 @@
     "serve": "node './node_modules/@quasar/cli/bin/quasar.js' serve"
   },
   "devDependencies": {
-    "@bufbuild/buf": "^1.32.2",
-    "@commitlint/cli": "^19.3.0",
-    "@commitlint/config-conventional": "^19.2.2",
-    "@electron/packager": "^18.3.2",
-    "@eslint/js": "^9.4.0",
-    "@intlify/unplugin-vue-i18n": "^4.0.0",
-    "@quasar/app-vite": "^2.0.0-beta.14",
+    "@bufbuild/buf": "^1.42.0",
+    "@commitlint/cli": "^19.5.0",
+    "@commitlint/config-conventional": "^19.5.0",
+    "@electron/packager": "^18.3.5",
+    "@eslint/js": "^9.11.1",
+    "@intlify/unplugin-vue-i18n": "^5.2.0",
+    "@quasar/app-vite": "^2.0.0-beta.22",
     "@quasar/cli": "^2.4.1",
-    "@quasar/quasar-app-extension-testing-unit-vitest": "^1.0.0",
+    "@quasar/quasar-app-extension-testing-unit-vitest": "^1.1.0",
     "@quasar/vite-plugin": "^1.7.0",
-    "@types/eslint": "^8.56.10",
+    "@types/eslint": "^9.6.1",
     "@types/google-protobuf": "^3.15.12",
     "@types/jsdom": "^21.1.7",
-    "@types/lodash": "^4.17.5",
-    "@types/node": "^20.14.2",
-    "@types/uuid": "^9.0.8",
-    "@vitejs/plugin-vue": "^5.0.5",
-    "@vitest/coverage-v8": "^1.6.0",
-    "@vue/compiler-dom": "^3.4.27",
+    "@types/lodash": "^4.17.9",
+    "@types/node": "^22.7.0",
+    "@types/uuid": "^10.0.0",
+    "@vitejs/plugin-vue": "^5.1.4",
+    "@vitest/coverage-v8": "^2.1.1",
+    "@vue/compiler-dom": "^3.5.8",
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.5.1",
-    "autoprefixer": "^10.4.19",
+    "autoprefixer": "^10.4.20",
     "commitizen": "^4.3.0",
-    "commitlint": "^19.3.0",
+    "commitlint": "^19.5.0",
+    "concurrently": "^9.0.1",
     "cross-env": "^7.0.3",
     "cz-conventional-changelog": "^3.3.0",
     "dotenv": "^16.4.5",
-    "electron": "^31.0.1",
-    "eslint": "^9.4.0",
+    "electron": "^32.1.2",
+    "eslint": "^9.11.1",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-vue": "^9.26.0",
-    "globals": "^15.4.0",
-    "husky": "^9.0.11",
-    "postcss": "^8.4.38",
+    "eslint-plugin-vue": "^9.28.0",
+    "globals": "^15.9.0",
+    "husky": "^9.1.6",
+    "postcss": "^8.4.47",
     "postcss-html": "^1.7.0",
     "postcss-load-config": "^6.0.1",
-    "prettier": "^3.3.2",
-    "rimraf": "^5.0.7",
+    "prettier": "^3.3.3",
+    "rimraf": "^6.0.1",
     "rollup-plugin-visualizer": "^5.12.0",
-    "sass": "^1.77.5",
-    "sass-loader": "^14.2.1",
-    "stylelint": "^16.6.1",
-    "stylelint-config-recommended-scss": "^14.0.0",
+    "sass": "^1.79.3",
+    "sass-loader": "^16.0.2",
+    "stylelint": "^16.9.0",
+    "stylelint-config-recommended-scss": "^14.1.0",
     "stylelint-config-recommended-vue": "^1.5.0",
     "stylelint-config-standard-scss": "^13.1.0",
     "stylelint-config-standard-vue": "^1.0.0",
-    "tailwindcss": "^3.4.4",
-    "typescript": "^5.4.5",
-    "typescript-eslint": "^7.13.0",
-    "vite": "^5.3.0",
-    "vitest": "^1.6.0",
-    "vue": "^3.4.27",
+    "tailwindcss": "^3.4.13",
+    "typescript": "^5.6.2",
+    "typescript-eslint": "^8.7.0",
+    "vite": "^5.4.8",
+    "vitest": "^2.1.1",
+    "vue": "^3.5.8",
     "vue-eslint-parser": "^9.4.3",
-    "vue-tsc": "^2.0.21",
+    "vue-tsc": "^2.1.6",
     "workbox-build": "^7.1.1",
     "workbox-cacheable-response": "^7.1.0",
     "workbox-core": "^7.1.0",
@@ -96,34 +97,34 @@
     "workbox-strategies": "^7.1.0"
   },
   "dependencies": {
-    "@ag-grid-community/client-side-row-model": "^31.3.2",
-    "@ag-grid-community/core": "^31.3.2",
-    "@ag-grid-community/styles": "^31.3.2",
-    "@ag-grid-community/vue3": "^31.3.2",
-    "@ag-grid-enterprise/clipboard": "^31.3.2",
-    "@ag-grid-enterprise/column-tool-panel": "^31.3.2",
-    "@ag-grid-enterprise/core": "^31.3.2",
-    "@ag-grid-enterprise/filter-tool-panel": "^31.3.2",
-    "@ag-grid-enterprise/menu": "^31.3.2",
-    "@ag-grid-enterprise/multi-filter": "^31.3.2",
-    "@ag-grid-enterprise/range-selection": "^31.3.2",
-    "@ag-grid-enterprise/row-grouping": "^31.3.2",
-    "@ag-grid-enterprise/set-filter": "^31.3.2",
-    "@bufbuild/protobuf": "^1.10.0",
-    "@grpc/grpc-js": "^1.10.9",
-    "@quasar/extras": "^1.16.11",
-    "@tanstack/vue-query": "^5.45.0",
-    "@vueuse/core": "^10.11.0",
-    "ag-charts-community": "^9.3.1",
-    "date-fns": "^3.6.0",
-    "google-protobuf": "^3.21.2",
-    "pinia": "^2.1.7",
-    "quasar": "^2.16.4",
+    "@ag-grid-community/client-side-row-model": "^32.2.0",
+    "@ag-grid-community/core": "^32.2.0",
+    "@ag-grid-community/styles": "^32.2.0",
+    "@ag-grid-community/vue3": "^32.2.0",
+    "@ag-grid-enterprise/clipboard": "^32.2.0",
+    "@ag-grid-enterprise/column-tool-panel": "^32.2.0",
+    "@ag-grid-enterprise/core": "^32.2.0",
+    "@ag-grid-enterprise/filter-tool-panel": "^32.2.0",
+    "@ag-grid-enterprise/menu": "^32.2.0",
+    "@ag-grid-enterprise/multi-filter": "^32.2.0",
+    "@ag-grid-enterprise/range-selection": "^32.2.0",
+    "@ag-grid-enterprise/row-grouping": "^32.2.0",
+    "@ag-grid-enterprise/set-filter": "^32.2.0",
+    "@bufbuild/protobuf": "^2.1.0",
+    "@grpc/grpc-js": "^1.11.3",
+    "@quasar/extras": "^1.16.12",
+    "@tanstack/vue-query": "^5.56.2",
+    "@vueuse/core": "^11.1.0",
+    "ag-charts-community": "^10.2.0",
+    "date-fns": "^4.1.0",
+    "google-protobuf": "^3.21.4",
+    "pinia": "^2.2.2",
+    "quasar": "^2.17.0",
     "register-service-worker": "^1.7.2",
     "uuid": "^10.0.0",
-    "vue": "^3.4.27",
-    "vue-i18n": "^9.13.1",
-    "vue-router": "^4.3.3"
+    "vue": "^3.5.8",
+    "vue-i18n": "^10.0.3",
+    "vue-router": "^4.4.5"
   },
   "config": {
     "commitizen": {
